Version 1.6.2-SNAPSHOT - xx xxx 2014
  
  * Update .gitignore

Version 1.6.1 -  5 Apr 2014

  * Correct Linux/Mac OS build problems with Python 2.7 module
  * Migrate to github

Version 1.6.0 - 15 Mar 2014

  * Remove errant BOOST_FILESYSTEM_VERSION declaration.
  * Correct RetsExceptionContext::GetFileName to fs::path.
  * Applied Ruby patch submitted by Matthew Schultz
  * Expose ObjectResponse getters to SWIG languages. Ticket #167.
  * Handle optional RETS-STATUS when included in login response.
    Ticket #168.
  * Applied patch submitted by Mike Owens to add GetHttpResponse().
  * Implement RETS 1.8 enhancements (excluding the UPDATE transaction).
    Note: there is a breaking change here in that the FORMAT defaulted
    to COMPACT and was optional. Now users must either explicitly set
    FORMAT or use the PAYLOAD option.
    Multiple tickets.
  * Incorporate Python3 patch provided by Harvey Falcic.

Version 1.5.3 - 10 Mar 2012

  * Fix detection of gmcs by configure.
  * Fix examples to use lazy initialization of the Columns to better
    demonstrate how to address just-in-time data delivery.
  * Fix Unix perl build.
  * Make sure that SearchResultSet::GetColumn doesn't attempt to use 
    an empty string.
  * Apply patches provided by Matthew Schultz.
  * Default to BOOST_FILESYSTEM_3 and boost 1.44 or later. Ticket #166.
  * Recognize RETS/1.8.0.
  * Pass exceptions through to Java.

Version 1.5.2 - 11 Feb 2011
  
  * Add --enable-thread-safe switch and make thread-safe.
    Ticket #124.
  * Support MinGW. Ticket #134.
  * Support Ruby-x86 on Windows. Ticket #136.
  * Rolled SWIG to 2.0.x. Ticket #159.
    Created MinGW-X86 and MinGW-x64 tools branches in vendor.
  * Make sure reply code 20201 is passed back to user. Ticket #137.
  * Fix Ruby GC crash for Ruby 1.8.7 and later. Ticket #158.
  * Expose Raw XML search enhancement to PHP. Ticket #160.
  * #undef MAP_TYPE and friends in GetObjectRequest.h. Ticket #161.