@@ -1,6 +1,8 @@
 Version 1.6.2-SNAPSHOT - xx xxx 2014
   
   * Update .gitignore
+  * Added Patch provided by Richard Shaffer to detect HTTP Response
+    codes before the end of the transaction.
 
 Version 1.6.1 -  5 Apr 2014
 
